# Maritime-Systems-Monitor

./: .env  .gitignore  README.md  challenge.md
backend/: load_vessel_settings.sh  prestart.sh  pyproject.toml  requirements.txt
backend/settings/: vessel.yml
backend/src/: __init__.py  backend_pre_start.py  load_vessel_settings.py  main.py  routers.py
backend/src/alembic/versions/: 418ef023bba8_.py  5874d97c5e99_.py  64633c613fec_.py  6559c4ab015c_.py  8da7b4d1985a_.py  c264fa93dd41_.py
backend/src/auth/: api.py  schemas.py  services.py
backend/src/core/: ballasting_system.py  config.py
backend/src/users/: api.py  schemas.py  services.py
backend/src/vessels/: api.py  exceptions.py  models.py  schemas.py  services.py  utils.py
backend/tests/: conftest.py
backend/tests/auth/: test_api.py  test_auth.py
backend/tests/crud/: test_user.py
backend/tests/scripts/: test_backend_pre_start.py  test_load_vessel_settings.py  test_test_pre_start.py
backend/tests/users/: test_api.py  test_services.py
backend/tests/utils/: user.py  utils.py
backend/tests/vessels/: conftest.py  test_api.py  test_services.py  test_utils.py
frontend/: index.html  openapi.json  package-lock.json  package.json
frontend/src/: main.tsx  routeTree.gen.ts  theme.tsx
frontend/src/client/: models.ts  schemas.ts  services.ts
frontend/src/components/Common/: Sidebar.tsx  SidebarVessels.tsx  UserMenu.tsx
frontend/src/routes/: __root.tsx  login.tsx  signup.tsx
frontend/src/routes/_layout/: vessels.tsx
server/: pyproject.toml  tasks.py
server/settings/: clear.json  vessel.yml
(+5 files in other folders)
